--- a/src/pages/[locale]/index.astro
+++ b/src/pages/[locale]/index.astro
@@ -46,20 +46,20 @@ const creador = translate.creator_name;
 
         {/* CONTACT SECTION */}
         <section class="mb-60" data-section="about-me" aria-label="About me section">
-            <div class="flex flex-col w-full px-4 md:px-0">
-                <AboutMe creador={creador} translate={translate} locale={locale} />
-            </div>
+            <AboutMe creador={creador} translate={translate} locale={locale} />
         </section>
     </div>
 </Layout>
 
-<!-- <script is:inline>
+{/*
+<script is:inline>
     document.addEventListener('DOMContentLoaded', function() {
         setTimeout(function() {
             document.getElementById('greetings_iam').classList.remove('invisible');
         }, 500);
     });
-</script> -->
+</script>
+*/}
 
 <style>
     .about-container-mask {
