--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -2,11 +2,17 @@
 const { creador, translate, locale } = Astro.props;
 ---
 
-<div
-    class="pt-(--header-h) w-full flex flex-col justify-center items-center text-center"
->
-    <h1 class="text-4xl dark:text-white text-black mb-4">{translate.nav.about_me}</h1>
-    <p class="max-w-2xl dark:text-white/80 text-black/80 max-[180px]:text-sm text-lg">
-        {translate.temporary_text}
-    </p>
+<div class="flex flex-col w-full px-4 md:px-0">
+    <div
+        class="pt-(--header-h) w-full flex flex-col justify-center items-center text-center"
+    >
+        <h1 class="text-4xl dark:text-white text-black mb-4">
+            {translate.nav.about_me}
+        </h1>
+        <p
+            class="max-w-2xl dark:text-white/80 text-black/80 max-[180px]:text-sm text-lg"
+        >
+            {translate.temporary_text}
+        </p>
+    </div>
 </div>
