--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -83,11 +83,11 @@ const PROJECTS = {
                 const { name, url, image, code_link, frameworks } = project;
                 return(
                     <div class="flex flex-col md:flex-row gap-6 md:gap-0 justify-between items-start group w-full opacity-0 project-card">
-                        <div class="m-0 p-0 overflow-hidden rounded-2xl border border-gray-300 dark:border-gray-800 dark:group-hover:border-gray-700 group-hover:border-gray-300 transition-all">
+                        <div class="m-0 p-0 overflow-hidden rounded-2xl border border-gray-300 dark:border-gray-800 dark:group-hover:border-gray-700 group-hover:border-gray-900 transition-all">
                             <img 
                                 src={image} 
                                 alt={`${project} image`} 
-                                class="h-full w-auto object-cover transition-transform duration-300 scale-110 group-hover:scale-100" 
+                                class="w-auto h-full object-cover transition-transform duration-300 scale-110 group-hover:scale-100" 
                             />
                         </div>
                         <div class="flex flex-col justify-start items-start md:items-center px-1 md:px-4 w-full md:min-w-[400px] h-full opacity-0 project-description">
