--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,10 +18,11 @@ const navContent = getNavContent(locale);
 >
 
     <div
-        class="text-base md:text-sm flex flex-col w-full md:w-fit mx-0 px-2 max-[390px]:pl-0 max-[390px]:pr-3 md:px-6 py-1 rounded-full md:mx-auto transition-all max-[250px]:rounded-xl"
+        class="text-base md:text-sm flex flex-col w-full md:w-fit mx-0 px-2 max-[390px]:pl-0 max-[390px]:pr-3 md:px-6 py-1 rounded-full md:mx-auto transition-all max-[250px]:rounded-xl max-[160px]:rounded-md"
         id="navigation"
     >
-        <ul class="relative flex flex-row max-[450px]:justify-between justify-center items-center w-full">
+        {/* PUEDE SER QUE PARA RESPONSIVE SEA NECESARIO AGREGAR CLASE [RELATIVE] PARA EL <ul> DE ABAJO */}
+        <ul class="flex flex-row max-[450px]:justify-between justify-center items-center w-full">
             <div 
                 class="absolute top-full hidden left-0 w-full h-auto py-3 mt-2 dark:bg-gray-900 bg-gray-100 dark:drop-shadow-none drop-shadow-md drop-shadow-black/20 max-[285px]:py-6 rounded-md z-9998 px-4"
                 id="responsive-nav"
@@ -50,7 +51,7 @@ const navContent = getNavContent(locale);
                 </ul>
             </div>
             <button 
-                class="max-[450px]:flex hidden justify-center items-center cursor-pointer transition-colors hover:bg-gray-300/60 dark:hover:bg-gray-800/60 rounded-md mx-3 p-2" 
+                class="max-[450px]:flex hidden justify-center items-center cursor-pointer transition-colors hover:bg-gray-300/60 dark:hover:bg-gray-800/60 rounded-md mx-3 p-2 outline-none border-none" 
                 id="hamburger"
                 aria-label="Hamburger menu"
             >
