--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -115,14 +115,14 @@ const PROJECTS = {
                                     ))}
                                 </div>
                             </div>
-                            <div class="flex w-full flex-row justify-start items-center my-3 gap-2">
+                            <div class={`flex w-full flex-row ${locale === "ua-UK" ? 'max-[360px]:flex-col justify-start max-[360px]:items-start' : 'max-[250px]:flex-col justify-start max-[240px]:items-start'} items-center my-3 gap-2`}>
                                 <a href={code_link} target="_blank" class="text-white dark:hover:bg-gray-900/50 hover:bg-gray-200 transition-all px-3 py-2 rounded-xl flex justify-center gap-2 items-center dark:bg-gray-900 bg-gray-100 border dark:border-white/30 dark:hover:border-white/40 hover:border-black/50 border-black/30 dark:drop-shadow-none drop-shadow-md drop-shadow-black/10 group">
                                     <i class="icon-[line-md--github] dark:group-hover:brightness-125 group-hover:brightness-90 dark:text-white text-black" />
-                                    <span class="dark:text-white text-black">Code</span>
+                                    <span class="dark:text-white text-black max-[240px]:text-sm text-base">Code</span>
                                 </a>
                                 <a href={url} class="text-white dark:hover:bg-gray-900/50 hover:bg-gray-200 transition-all px-3 py-2 rounded-xl flex justify-center gap-2 items-center dark:bg-gray-900 bg-gray-100 border dark:border-white/30 dark:hover:border-white/40 hover:border-black/50 border-black/30 dark:drop-shadow-none drop-shadow-md drop-shadow-black/10 group">
                                     <i class="icon-[line-md--link] dark:group-hover:brightness-125 group-hover:brightness-90 dark:text-white text-black" />
-                                    <span class="dark:text-white text-black">{translate.projects.preview}</span>
+                                    <span class="dark:text-white text-black max-[240px]:text-sm text-base">{translate.projects.preview}</span>
                                 </a>
                             </div>
                         </div>
