--- a/src/components/TrajectorySection.astro
+++ b/src/components/TrajectorySection.astro
@@ -70,7 +70,7 @@ const EXPERIENCES = [
                             />
 
                             <div
-                                class={`bg-transparent dark:md:bg-gray-800 md:bg-gray-100 drop-shadow-md drop-shadow-black/10 rounded-2xl shadow-lg max-[180px]:p-0 p-5 experience-card opacity-0 w-full md:w-fit
+                                class={`bg-transparent dark:md:bg-gray-800 md:bg-gray-100 drop-shadow-md drop-shadow-black/10 rounded-2xl shadow-lg max-[180px]:p-0 p-5 experience-card opacity-0 w-full md:w-fit max-[220px]:px-2
                                 ${
                                     index % 2 === 0
                                         ? "ml-0 mr-0 md:ml-auto md:mr-8"
@@ -91,7 +91,7 @@ const EXPERIENCES = [
                                 </div>
                                 { interShip &&
                                     <div class="w-full flex justify-start items-center mt-5">
-                                        <span class="dark:text-yellow-500 text-yellow-600 text-sm dark:bg-yellow-500/15 bg-yellow-300/20 dark:drop-shadow-none drop-shadow-md drop-shadow-yellow-300 px-2 py-1 md:py-0.5 rounded-full border dark:border-transparent border-yellow-300/60">
+                                        <span class="dark:text-yellow-500 text-yellow-600 text-sm dark:bg-yellow-500/15 bg-yellow-300/20 dark:drop-shadow-none drop-shadow-md drop-shadow-yellow-300 max-[220px]:px-3 max-[220px]:text-[12px] px-2 py-1 md:py-0.5 rounded-full border dark:border-transparent border-yellow-300/60 max-[185px]:px-2 dark:max-[155px]:bg-transparent max-[155px]:bg-transparent max-[155px]:px-0">
                                             {translate.trajectory.intership_message}
                                         </span>
                                     </div>
